--- a/packages/loot-core/package.json
+++ b/packages/loot-core/package.json
@@ -60,7 +60,8 @@
     "generate:i18n": "i18next",
     "test": "npm-run-all -cp 'test:*'",
     "test:node": "ENV=node vitest --run",
-    "test:web": "ENV=web vitest --run -c vitest.web.config.ts"
+    "test:web": "ENV=web vitest --run -c vitest.web.config.ts",
+    "generate:db-migrations": "drizzle-kit generate --config=drizzle.config.ts $@ && node ./bin/compile-drizzle-migrations.mjs"
   },
   "dependencies": {
     "@electric-sql/pglite": "^0.2.17",
