--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,22 @@ jobs:
           name: actual-crdt
           path: packages/crdt/actual-crdt.tgz
 
+  plugins-core:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up environment
+        uses: ./.github/actions/setup
+      - name: Build Plugins Core
+        run: yarn workspace @actual-app/plugins-core build
+      - name: Create package tgz
+        run: yarn workspace @actual-app/plugins-core pack --filename actual-plugins-core.tgz
+      - name: Upload Build
+        uses: actions/upload-artifact@v4
+        with:
+          name: actual-plugins-core
+          path: packages/plugins-core/actual-plugins-core.tgz
+
   web:
     runs-on: ubuntu-latest
     steps:
