--- a/packages/query/tsconfig.json
+++ b/packages/query/tsconfig.json
@@ -1,17 +1,15 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    // Using ES2021 because that’s the newest version where
-    // the latest Node 16.x release supports all of the features
     "target": "ES2021",
-    "module": "CommonJS",
-    "moduleResolution": "node10",
     "noEmit": false,
     "declaration": true,
     "outDir": "dist",
     "declarationDir": "@types",
     "paths": {
-      "loot-core/*": ["./@types/loot-core/loot-core/src/*"]
+      "@actual-app/shared-types": ["../shared-types/src/index.ts"],
+      "@actual-app/shared-types/*": ["../shared-types/src/*"],
+      "@actual-app/shared-types/models": ["../shared-types/src/models/index.ts"]
     }
   },
   "include": ["."],
