--- a/packages/plugins-core/package.json
+++ b/packages/plugins-core/package.json
@@ -50,10 +50,12 @@
     "./src/*": "./src/*"
   },
   "peerDependencies": {
+    "@emotion/css": "^11.13.5",
     "i18next": "^25.2.1",
     "react": "19.1.0",
     "react-aria-components": "^1.7.1",
     "react-dom": "19.1.0",
-    "react-i18next": "^16.0.0"
+    "react-i18next": "^16.0.0",
+    "usehooks-ts": "^3.1.1"
   }
 }
