--- a/packages/desktop-electron/extra-resources/linux/org.actualbudget.actual.desktop
+++ b/packages/desktop-electron/extra-resources/linux/org.actualbudget.actual.desktop
@@ -4,5 +4,7 @@ Type=Application
 Comment=A local-first personal finance app
 Terminal=false
 Icon=org.actualbudget.actual
-Exec=actual.sh
-Categories=Budget;Money;
+Exec=flatpak run org.actualbudget.actual
+Categories=Finance;Office;
+StartupWMClass=Actual
+Keywords=budget;finance;money;expenses;
