--- a/org.actualbudget.actual.desktop
+++ b/org.actualbudget.actual.desktop
@@ -4,7 +4,7 @@ Type=Application
 Comment=A local-first personal finance app
 Terminal=false
 Icon=org.actualbudget.actual
-Exec=flatpak run org.actualbudget.actual
+Exec=actual
 Categories=Finance;Office;
 StartupWMClass=Actual
 Keywords=budget;finance;money;expenses;
