lint the manifest

--- a/org.actualbudget.actual.yml
+++ b/org.actualbudget.actual.yml
@@ -10,9 +10,8 @@ finish-args:
   - --share=ipc
   - --share=network
   - --device=dri
-  - --socket=x11
+  - --socket=fallback-x11
   - --socket=wayland
-  - --filesystem=home
 modules:
   - name: wrapper
     buildsystem: simple
