:electron:  Prep for flathub - arm64 support and metainfo (#5947)
* prep for flathub -arm64 build and metainfo

* release note

* spelling mistake

* whitespace removal

* arch build issues

* hmm

* removing arm64 from flatpak - that would get bundled by flathub anyway

--- a/packages/desktop-electron/package.json
+++ b/packages/desktop-electron/package.json
@@ -46,10 +46,24 @@
     },
     "linux": {
       "target": [
-        "flatpak",
-        "AppImage"
+        {
+          "target": "flatpak",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
       ],
-      "artifactName": "${productName}-linux-${arch}.${ext}"
+      "artifactName": "${productName}-linux-${arch}.${ext}",
+      "extraResources": [
+        "extra-resources/linux"
+      ]
     },
     "flatpak": {
       "runtimeVersion": "24.08",
