--- a/.github/workflows/electron-pr.yml
+++ b/.github/workflows/electron-pr.yml
@@ -39,9 +39,9 @@ jobs:
           sudo apt-get install flatpak -y
           sudo apt-get install flatpak-builder -y
           sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-          sudo flatpak install org.freedesktop.Sdk/x86_64/24.08 -y
-          sudo flatpak install org.freedesktop.Platform/x86_64/24.08 -y
-          sudo flatpak install org.electronjs.Electron2.BaseApp/x86_64/24.08 -y
+          sudo flatpak install org.freedesktop.Sdk//24.08 -y
+          sudo flatpak install org.freedesktop.Platform//24.08 -y
+          sudo flatpak install org.electronjs.Electron2.BaseApp//24.08 -y
       - name: Set up environment
         uses: ./.github/actions/setup
       - name: Build Electron
