--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "build:api": "yarn workspace @actual-app/api build",
     "generate:i18n": "yarn workspace @actual-app/web generate:i18n",
     "generate:release-notes": "ts-node ./bin/release-note-generator.ts",
-    "test": "yarn workspaces foreach --all --parallel --verbose run test",
-    "test:debug": "yarn workspaces foreach --all --verbose run test",
-    "e2e": "yarn workspaces foreach --all --exclude desktop-electron --parallel --verbose run e2e",
+    "test": "lage test --verbose",
+    "test:debug": "lage test --verbose --no-cache",
+    "e2e": "lage e2e --verbose --scope '@actual-app/web'",
     "e2e:desktop": "yarn build:desktop --skip-exe-build && yarn workspace desktop-electron e2e",
     "playwright": "yarn workspace @actual-app/web run playwright",
-    "vrt": "yarn workspaces foreach --all --parallel --verbose run vrt",
+    "vrt": "lage vrt --verbose",
     "vrt:docker": "./bin/run-vrt",
     "rebuild-electron": "./node_modules/.bin/electron-rebuild -m ./packages/loot-core",
     "rebuild-node": "yarn workspace loot-core rebuild",
@@ -73,6 +73,7 @@
     "globals": "^16.4.0",
     "html-to-image": "^1.11.13",
     "husky": "^9.1.7",
+    "lage": "^2.14.14",
     "lint-staged": "^16.2.3",
     "minimatch": "^10.0.3",
     "node-jq": "^6.3.1",
