Optimize CI and test execution with lage improvements
- Add lage cache to GitHub Actions for faster CI runs
- Skip translation downloads for backend-only jobs (lint, typecheck, test, api, crdt, server)
- Add .lage/ directory to .gitignore
- Fix vitest watch mode: add --run flag to all test scripts to prevent hanging
- Add --continue flag to lage test commands to run all packages even if one fails
- Update AGENTS.md documentation to reflect test execution changes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up environment
         uses: ./.github/actions/setup
+        with:
+          download-translations: 'false'
       - name: Build API
         run: cd packages/api && yarn build
       - name: Create package tgz
@@ -40,6 +42,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up environment
         uses: ./.github/actions/setup
+        with:
+          download-translations: 'false'
       - name: Build CRDT
         run: cd packages/crdt && yarn build
       - name: Create package tgz
@@ -75,6 +79,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up environment
         uses: ./.github/actions/setup
+        with:
+          download-translations: 'false'
       - name: Build Server
         run: yarn workspace @actual-app/sync-server build
       - name: Upload Build
