--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "build:api": "yarn workspace @actual-app/api build",
     "generate:i18n": "yarn workspace @actual-app/web generate:i18n",
     "generate:release-notes": "ts-node ./bin/release-note-generator.ts",
-    "test": "lage test --verbose",
-    "test:debug": "lage test --verbose --no-cache",
-    "e2e": "lage e2e --verbose --scope '@actual-app/web'",
+    "test": "lage test --continue",
+    "test:debug": "lage test --no-cache --continue",
+    "e2e": "lage e2e --scope '@actual-app/web'",
     "e2e:desktop": "yarn build:desktop --skip-exe-build && yarn workspace desktop-electron e2e",
     "playwright": "yarn workspace @actual-app/web run playwright",
-    "vrt": "lage vrt --verbose",
+    "vrt": "lage vrt",
     "vrt:docker": "./bin/run-vrt",
     "rebuild-electron": "./node_modules/.bin/electron-rebuild -m ./packages/loot-core",
     "rebuild-node": "yarn workspace loot-core rebuild",
@@ -57,7 +57,6 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@lage-run/reporters": "^1.3.5",
     "@octokit/rest": "^22.0.0",
     "@types/node": "^22.18.11",
     "@types/prompts": "^2.4.9",
