--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -54,6 +54,6 @@
   "scripts": {
     "generate:icons": "rm src/icons/*/*.tsx; cd src/icons && svgr --template template.ts --index-template index-template.ts --typescript --expand-props start -d . .",
     "test": "npm-run-all -cp 'test:*'",
-    "test:web": "ENV=web vitest -c vitest.web.config.ts"
+    "test:web": "ENV=web vitest --run -c vitest.web.config.ts"
   }
 }
