--- a/packages/loot-core/package.json
+++ b/packages/loot-core/package.json
@@ -11,8 +11,8 @@
     "watch:browser": "cross-env NODE_ENV=development ./bin/build-browser",
     "generate:i18n": "i18next",
     "test": "npm-run-all -cp 'test:*'",
-    "test:node": "ENV=node vitest",
-    "test:web": "ENV=web vitest -c vitest.web.config.ts"
+    "test:node": "ENV=node vitest --run",
+    "test:web": "ENV=web vitest --run -c vitest.web.config.ts"
   },
   "author": "",
   "license": "ISC",
