--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "generate:release-notes": "ts-node ./bin/release-note-generator.ts",
     "test": "lage test --continue",
     "test:debug": "lage test --no-cache --continue",
-    "e2e": "lage e2e --scope '@actual-app/web'",
+    "e2e": "lage e2e --continue --scope '@actual-app/web'",
     "e2e:desktop": "yarn build:desktop --skip-exe-build && yarn workspace desktop-electron e2e",
     "playwright": "yarn workspace @actual-app/web run playwright",
-    "vrt": "lage vrt",
+    "vrt": "lage vrt --continue",
     "vrt:docker": "./bin/run-vrt",
     "rebuild-electron": "./node_modules/.bin/electron-rebuild -m ./packages/loot-core",
     "rebuild-node": "yarn workspace loot-core rebuild",
