--- a/packages/desktop-electron/package.json
+++ b/packages/desktop-electron/package.json
@@ -88,7 +88,7 @@
           ]
         }
       ],
-      "icon": "icons/icon.ico",
+      "icon": "icons/icon.png",
       "artifactName": "${productName}-windows-${arch}.${ext}"
     },
     "appx": {
