--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -49,6 +49,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up environment
         uses: ./.github/actions/setup
+        with:
+          download-translations: 'false'
       - name: Test
         run: yarn test
 
