--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -28,9 +28,14 @@ jobs:
         run: ./.github/actions/netlify-wait-for-build
 
   functional:
-    name: Functional
+    name: Functional (Shard ${{ matrix.shardIndex }}/${{ matrix.shardTotal }})
     needs: netlify
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     container:
       image: mcr.microsoft.com/playwright:v1.56.0-jammy
     steps:
@@ -38,16 +43,15 @@ jobs:
       - name: Set up environment
         uses: ./.github/actions/setup
       - name: Run E2E Tests on Netlify URL
-        run: yarn e2e
+        run: yarn e2e --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         env:
           E2E_START_URL: ${{ needs.netlify.outputs.netlify_url }}
       - uses: actions/upload-artifact@v4
-        if: always()
+        if: ${{ !cancelled() }}
         with:
-          name: desktop-client-test-results
-          path: packages/desktop-client/test-results/
-          retention-days: 30
-          overwrite: true
+          name: blob-report-functional-${{ matrix.shardIndex }}
+          path: packages/desktop-client/blob-report
+          retention-days: 1
 
   functional-desktop-app:
     name: Functional Desktop App
@@ -70,9 +74,14 @@ jobs:
           overwrite: true
 
   vrt:
-    name: Visual regression
+    name: Visual regression (Shard ${{ matrix.shardIndex }}/${{ matrix.shardTotal }})
     needs: netlify
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     container:
       image: mcr.microsoft.com/playwright:v1.56.0-jammy
     steps:
@@ -80,13 +89,62 @@ jobs:
       - name: Set up environment
         uses: ./.github/actions/setup
       - name: Run VRT Tests on Netlify URL
-        run: yarn vrt
+        run: yarn vrt --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
         env:
           E2E_START_URL: ${{ needs.netlify.outputs.netlify_url }}
       - uses: actions/upload-artifact@v4
-        if: always()
+        if: ${{ !cancelled() }}
         with:
-          name: desktop-client-test-results
-          path: packages/desktop-client/test-results/
+          name: blob-report-vrt-${{ matrix.shardIndex }}
+          path: packages/desktop-client/blob-report
+          retention-days: 1
+
+  merge-functional-reports:
+    name: Merge Functional Test Reports
+    if: ${{ !cancelled() }}
+    needs: [functional]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up environment
+        uses: ./.github/actions/setup
+      - name: Download blob reports from GitHub Actions Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: all-blob-reports
+          pattern: blob-report-functional-*
+          merge-multiple: true
+      - name: Merge into HTML Report
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
+        working-directory: packages/desktop-client
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: functional-test-results--attempt-${{ github.run_attempt }}
+          path: packages/desktop-client/playwright-report
           retention-days: 30
-          overwrite: true
+
+  merge-vrt-reports:
+    name: Merge VRT Reports
+    if: ${{ !cancelled() }}
+    needs: [vrt]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up environment
+        uses: ./.github/actions/setup
+      - name: Download blob reports from GitHub Actions Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: all-blob-reports
+          pattern: blob-report-vrt-*
+          merge-multiple: true
+      - name: Merge into HTML Report
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
+        working-directory: packages/desktop-client
+      - name: Upload HTML report
+        uses: actions/upload-artifact@v4
+        with:
+          name: vrt-test-results--attempt-${{ github.run_attempt }}
+          path: packages/desktop-client/playwright-report
+          retention-days: 30
