:electron:  New desktop app icons (#5965)
* add new desktop app icons for better display on linux, and to prepare us for mac liquid glass

* png for windows

* release notes

* put old icons in archived folder

--- a/packages/desktop-electron/package.json
+++ b/packages/desktop-electron/package.json
@@ -89,7 +89,7 @@
           ]
         }
       ],
-      "icon": "icons/icon.ico",
+      "icon": "icons/icon.png",
       "artifactName": "${productName}-windows-${arch}.${ext}"
     },
     "appx": {
