Refactor test execution to use lage task runner (#5964)

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "build:api": "yarn workspace @actual-app/api build",
     "generate:i18n": "yarn workspace @actual-app/web generate:i18n",
     "generate:release-notes": "ts-node ./bin/release-note-generator.ts",
-    "test": "yarn workspaces foreach --all --parallel --verbose run test",
-    "test:debug": "yarn workspaces foreach --all --verbose run test",
+    "test": "lage test --continue",
+    "test:debug": "lage test --no-cache --continue",
     "e2e": "yarn workspace @actual-app/web run e2e",
     "e2e:desktop": "yarn build:desktop --skip-exe-build && yarn workspace desktop-electron e2e",
     "playwright": "yarn workspace @actual-app/web run playwright",
@@ -73,6 +73,7 @@
     "globals": "^16.4.0",
     "html-to-image": "^1.11.13",
     "husky": "^9.1.7",
+    "lage": "^2.14.14",
     "lint-staged": "^16.2.3",
     "minimatch": "^10.0.3",
     "node-jq": "^6.3.1",
