--- a/packages/docs/.gitignore
+++ b/packages/docs/.gitignore
@@ -1,20 +1,2 @@
-/.docusaurus
-/build
-/node_modules
-
-.DS_Store
-
-.idea
-*.iml
-
-# Yarn
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+.docusaurus
+build
