--- a/packages/sync-server/package.json
+++ b/packages/sync-server/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@actual-app/crdt": "2.1.0",
     "@actual-app/web": "workspace:*",
+    "akahu": "^2.2.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.4.1",
     "convict": "^6.2.4",
