--- a/.prettierignore
+++ b/.prettierignore
@@ -10,6 +10,7 @@ packages/desktop-client/bundle.browser.js
 packages/desktop-client/stats.json
 packages/desktop-client/.swc/
 packages/desktop-client/build/
+packages/desktop-client/dev-dist/
 packages/desktop-client/locale/
 packages/desktop-client/build-electron/
 packages/desktop-client/build-stats/
@@ -26,5 +27,7 @@ packages/loot-core/**/node_modules/*
 packages/loot-core/**/lib-dist/*
 packages/loot-core/**/proto/*
 packages/sync-server/coverage/
+packages/sync-server/user-files/
+packages/sync-server/server-files/
 .yarn/*
 upcoming-release-notes/*
