putting flatpak back

--- a/packages/desktop-electron/package.json
+++ b/packages/desktop-electron/package.json
@@ -48,6 +48,12 @@
     "linux": {
       "target": [
         {
+          "target": "flatpak",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
           "target": "AppImage",
           "arch": [
             "x64",
