adding the 512px image to the icns file

--- a/packages/desktop-electron/package.json
+++ b/packages/desktop-electron/package.json
@@ -89,7 +89,7 @@
           ]
         }
       ],
-      "icon": "icons/512x512.png",
+      "icon": "icons/icon.png",
       "artifactName": "${productName}-windows-${arch}.${ext}"
     },
     "appx": {
