--- a/.github/workflows/docs-spelling.yml
+++ b/.github/workflows/docs-spelling.yml
@@ -1,4 +1,4 @@
-name: Check Spelling
+name: Check Spelling (Docs)
 
 # Comment management is handled through a secondary job, for details see:
 # https://github.com/check-spelling/check-spelling/wiki/Feature%3A-Restricted-Permissions
@@ -36,21 +36,29 @@ name: Check Spelling
 on:
   push:
     branches:
-    - "**"
+      - '**'
     tags-ignore:
-    - "**"
+      - '**'
+    paths:
+      - 'packages/docs/**'
+      - '.github/workflows/docs-spelling.yml'
+      - '.github/actions/docs-spelling/**'
   pull_request_target:
     branches:
-    - "**"
+      - '**'
     tags-ignore:
-    - "**"
+      - '**'
+    paths:
+      - 'packages/docs/**'
+      - '.github/workflows/docs-spelling.yml'
+      - '.github/actions/docs-spelling/**'
     types:
-    - 'opened'
-    - 'reopened'
-    - 'synchronize'
+      - 'opened'
+      - 'reopened'
+      - 'synchronize'
   issue_comment:
     types:
-    - 'created'
+      - 'created'
 
 jobs:
   spelling:
@@ -69,32 +77,32 @@ jobs:
       # note: If you use only_check_changed_files, you do not want cancel-in-progress
       cancel-in-progress: true
     steps:
-    - name: check-spelling
-      id: spelling
-      uses: check-spelling/check-spelling@main
-      with:
-        suppress_push_for_open_pull_request: 1
-        checkout: true
-        check_file_names: 1
-        spell_check_this: check-spelling/spell-check-this@prerelease
-        post_comment: 0
-        use_magic_file: 1
-        experimental_apply_changes_via_bot: 1
-        use_sarif: 1
-        extra_dictionary_limit: 12
-        check_extra_dictionaries: ''
-        extra_dictionaries:
-          cspell:cpp/src/cpp.txt
-          cspell:software-terms/src/software-terms.txt
-          cspell:python/src/python/python-lib.txt
-          cspell:node/node.txt
-          cspell:filetypes/filetypes.txt
-          cspell:aws/aws.txt
-          cspell:typescript/dict/typescript.txt
-          cspell:npm/dict/npm.txt
-          cspell:fullstack/dict/fullstack.txt
-          cspell:html/dict/html.txt
-          cspell:css/dict/css.txt
+      - name: check-spelling
+        id: spelling
+        uses: check-spelling/check-spelling@main
+        with:
+          suppress_push_for_open_pull_request: 1
+          checkout: true
+          check_file_names: 1
+          spell_check_this: check-spelling/spell-check-this@prerelease
+          post_comment: 0
+          use_magic_file: 1
+          experimental_apply_changes_via_bot: 1
+          use_sarif: 1
+          extra_dictionary_limit: 12
+          check_extra_dictionaries: ''
+          extra_dictionaries: cspell:cpp/src/cpp.txt
+            cspell:software-terms/src/software-terms.txt
+            cspell:python/src/python/python-lib.txt
+            cspell:node/node.txt
+            cspell:filetypes/filetypes.txt
+            cspell:aws/aws.txt
+            cspell:typescript/dict/typescript.txt
+            cspell:npm/dict/npm.txt
+            cspell:fullstack/dict/fullstack.txt
+            cspell:html/dict/html.txt
+            cspell:css/dict/css.txt
+          config: .github/actions/docs-spelling
 
   comment-push:
     name: Report (Push)
@@ -105,12 +113,13 @@ jobs:
       contents: write
     if: (success() || failure()) && needs.spelling.outputs.followup && github.event_name == 'push'
     steps:
-    - name: comment
-      uses: check-spelling/check-spelling@main
-      with:
-        checkout: true
-        spell_check_this: check-spelling/spell-check-this@prerelease
-        task: ${{ needs.spelling.outputs.followup }}
+      - name: comment
+        uses: check-spelling/check-spelling@main
+        with:
+          checkout: true
+          spell_check_this: check-spelling/spell-check-this@prerelease
+          task: ${{ needs.spelling.outputs.followup }}
+          config: .github/actions/docs-spelling
 
   comment-pr:
     name: Report (PR)
@@ -121,13 +130,14 @@ jobs:
       pull-requests: write
     if: (success() || failure()) && needs.spelling.outputs.followup && contains(github.event_name, 'pull_request')
     steps:
-    - name: comment
-      uses: check-spelling/check-spelling@main
-      with:
-        checkout: true
-        spell_check_this: check-spelling/spell-check-this@prerelease
-        task: ${{ needs.spelling.outputs.followup }}
-        experimental_apply_changes_via_bot: 1
+      - name: comment
+        uses: check-spelling/check-spelling@main
+        with:
+          checkout: true
+          spell_check_this: check-spelling/spell-check-this@prerelease
+          task: ${{ needs.spelling.outputs.followup }}
+          experimental_apply_changes_via_bot: 1
+          config: .github/actions/docs-spelling
 
   update:
     name: Update PR
@@ -137,17 +147,18 @@ jobs:
       actions: read
     runs-on: ubuntu-latest
     if: ${{
-        github.event_name == 'issue_comment' &&
-        github.event.issue.pull_request &&
-        contains(github.event.comment.body, '@check-spelling-bot apply')
+      github.event_name == 'issue_comment' &&
+      github.event.issue.pull_request &&
+      contains(github.event.comment.body, '@check-spelling-bot apply')
       }}
     concurrency:
       group: spelling-update-${{ github.event.issue.number }}
       cancel-in-progress: false
     steps:
-    - name: apply spelling updates
-      uses: check-spelling/check-spelling@main
-      with:
-        experimental_apply_changes_via_bot: 1
-        checkout: true
-        ssh_key: "${{ secrets.CHECK_SPELLING }}"
+      - name: apply spelling updates
+        uses: check-spelling/check-spelling@main
+        with:
+          experimental_apply_changes_via_bot: 1
+          checkout: true
+          ssh_key: '${{ secrets.CHECK_SPELLING }}'
+          config: .github/actions/docs-spelling
