--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,18 @@ jobs:
         run: cd packages/api && yarn build
       - name: Create package tgz
         run: cd packages/api && yarn pack && mv package.tgz actual-api.tgz
+      - name: Prepare bundle stats artifact
+        run: cp packages/api/app/stats.json api-stats.json
       - name: Upload Build
         uses: actions/upload-artifact@v5
         with:
           name: actual-api
           path: packages/api/actual-api.tgz
+      - name: Upload API bundle stats
+        uses: actions/upload-artifact@v5
+        with:
+          name: api-build-stats
+          path: api-stats.json
 
   crdt:
     runs-on: ubuntu-latest
