--- a/.github/workflows/issues-remove-help-wanted.yml
+++ b/.github/workflows/issues-remove-help-wanted.yml
@@ -9,6 +9,6 @@ jobs:
     if: ${{ !contains(github.event.issue.labels.*.name, 'feature') && contains(github.event.issue.labels.*.name, 'help wanted') }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions-ecosystem/action-remove-labels@v1
+      - uses: actions-ecosystem/action-remove-labels@2ce5d41b4b6aa8503e285553f75ed56e0a40bae0 # v1.3.0
         with:
           labels: help wanted
