--- a/.github/workflows/size-compare.yml
+++ b/.github/workflows/size-compare.yml
@@ -29,7 +29,7 @@ jobs:
       contents: read
     steps:
       - name: Checkout base branch
-        uses: actions/checkout@v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           ref: ${{ github.base_ref }}
       - name: Set up environment
